# allotemplate

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  configure.bat  configure.sh  debug.sh  distclean.bat  distclean.sh  general_utils.hpp  init.sh  rand_test.cpp  run.bat  run.sh  rund.sh  runf.sh  sphere_utils.hpp  srun.sh  test_in_sphere_01.cpp  update.sh
captureTest/: main.cpp
cmake/: NoInSourceBuilds.cmake  SetIPO.cmake
cubemap_test/: cubemap.hpp  main.cpp
data/: config.txt
ex_2D_and_3D/: CMakeLists.txt  main.cpp
ex_2D_drawing/: main.cpp
ex_3D_drawing/: app_config.cmake  main.cpp
ex_app/: CMakeLists.txt  main.cpp
ex_audioIO/: main.cpp
ex_configload/: CMakeLists.txt  app_config.cmake  config.hpp  main.cpp
ex_cubemap/: app_config.cmake  cubemap.hpp  main.cpp
ex_easyvao/: app_config.cmake  main.cpp
ex_file/: CMakeLists.txt  app_config.cmake  main.cpp
ex_perprojection/: app_config.cmake  main.cpp  perprojection.hpp
fboExample/: main.cpp
file_test/: main.cpp
glv_test/: CMakeLists.txt  app_config.cmake  glv_draw_al.hpp  main.cpp
glv_test2/: app_config.cmake  glv_draw_al.hpp  main.cpp
graphics_test/: CMakeLists.txt  main.cpp
imageTest/: main.cpp
include/library_name/: singing_polyhedron.hpp
sphere/: config.hpp  cubemap.hpp  perprojection.hpp  sphere_utils.hpp  test01.cpp  test02.cpp  test_pp.cpp  write_binary.cpp
sphere/data/: config.txt
src/: main.cpp  test.cpp
src/app/: app.cpp  app.hpp  main.cpp  name.txt
src/lib/: name.txt  singing_polyhedron.cpp
stereo/: proj_mat.cpp  stereo_api.cpp  test_displacement.cpp
test_app/: CMakeLists.txt  main.cpp
utils/: alloinit  alloinit.md
